# planitor

./: .dockerignore  .gitignore  .ipython.py  .postcssrc  .prettierignore  Dockerfile  README.md  babel.config.json  docker-compose.yml  dump_openapi.py  ipython.sh  jokull.keys  migrate.py  orval.config.js  package-lock.json  package.json  poetry.Dockerfile  postcss.config.js  pyproject.toml  pyrightconfig.json  reindex.py  requirements-dev.txt  requirements.txt  rollup.config.js  scrapy.cfg  setup.py  shell.py  snowpack.config.js  snowpack.config.json  tailwind.config.js  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
frontend/: accounts.js  api.js  app.js  app.ts  modals.js  styles.css
frontend/forms/: login.js  new-password.js  password-recovery.js
planitor/: __init__.py  actors.py  attachments.py  cases.py  crud.py  database.py  geo.py  language.py  mail.py  main.py  mapkit.py  meetings.py  minutes.py  models.py  monitor.py  notifications.py  permits.py  postprocess.py  search.py  security.py  session.py  templates.py
planitor/crud/: __init__.py  accounts.py  base.py  city.py  follow.py  monitor.py  search.py
planitor/email-templates/: base.html  municipality_case_notification.html  new_account.html  reset_password.html  subscription_base.html  subscription_immediate.html  subscription_meeting.html  subscription_weekly.html
planitor/endpoints/: __init__.py  accounts.py  city.py  debug.py  follow.py  mail.py  monitor.py  notifications.py  templates.py  utils.py
planitor/endpoints/api/: __init__.py  accounts.py  city.py  enums.py  follow.py  monitor.py  permits.py
planitor/endpoints/email-templates/: base.html  reset_password.html
planitor/language/: companies.py  highlight.py  lemma_api.py  search.py
planitor/models/: __init__.py  accounts.py  city.py  enums.py  monitor.py
planitor/schemas/: __init__.py  accounts.py  city.py  enums.py  monitor.py  permits.py
planitor/utils/: kennitala.py  mapping.py  rsk.py  stopwords.py  text.py  timeago.py
public/: index.html
scrape/: pipelines.py  settings.py
scrape/spiders/: arborg.py  hafnarfjordur.py  hfj_byggingarfulltrui.py  reykjavik_byggingarfulltrui.py  reykjavik_byggingarfulltrui_pdf.py  reykjavik_skipulagsfulltrui.py  reykjavik_skipulagsrad.py  test.py
scripts/: arborg_case_applicants.py  development.py  hafnarfjordur_case_applicants.py  hafnarfjordur_fix_newlines.py  logbylaskra.py  migrate.py  re_match_stadfangaskra.py  review_permit_suggestions.py  shell.py  sqla_window.py
sql/: dramatiq.sql
src/: accounts.jsx  accounts.tsx  api.js  api.ts  app.js  app.jsx  app.tsx  follow.jsx  follow.tsx  index.html  index.js  maps.jsx  maps.tsx  modals.js  modals.ts  modals.tsx  navigation.jsx  navigation.tsx  pdfViewer.jsx  pdfViewer.tsx  query.ts  styles.css  subscriptions.jsx  subscriptions.tsx  symbols.jsx  symbols.tsx  unsubscribe.tsx
src/api/: client.ts  types.ts
src/forms/: login.jsx  login.tsx  new-password.jsx  new-password.tsx  password-recovery.jsx  password-recovery.tsx  permits.jsx  permits.tsx  widgets.jsx  widgets.tsx
templates/: 404.html  account.html  address.html  address_paywall.html  base.html  case.html  company.html  company_paywall.html  index.html  login.html  meeting.html  minute.html  minute_permits.html  modal.html  municipalities.html  municipality.html  password_recovery.html  person.html  search_results.html  server_error.html  unsubscribe.html
templates/includes/: breadcrumbs.html  cases.html  entities.html  minute.html
templates/symbols/: symbols.html
tests/: conftest.py  test_attachments.py  test_cases.py  test_crud.py  test_geo.py  test_language.py  test_minutes.py  test_models.py  test_monitor.py  test_notifications.py  test_permits.py  test_postprocess.py  test_search.py
tests/payloads/: skipulagsrad.py
tests/test_endpoints/test_api/: test_monitor.py
tests/test_language/: test_companies.py  test_highlight.py  test_search.py
tests/test_utils/: test_text.py
testtemplates/: municipality.html
