[tool.poetry]
name = "planitor"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg <jokull@solberg.is>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.11.1"
uvicorn = "^0.11.8"
requests = "^2.24.0"
aiofiles = "^0.5.0"
hashids = "^1.2.0"
sqlakeyset = "^0.1.1579837191"
pyjwt = {extras = ["crypto"], version = "^1.7.1"}
sqlalchemy_utils = "^0.36.3"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
email-validator = "^1.0.5"
emails = "^0.6"
sentry-sdk = "^0.19.4"
sentry-dramatiq = "^0.3.2"
python-multipart = "^0.0.5"
fastapi = "^0.61.2"
psycopg2 = "^2.8.6"
redis = "^3.5.3"
dramatiq = "^1.9.0"
migra = "^1.0.1605230943"
boto3 = "^1.14.17"
imgix = "^3.2.1"
reynir = "^2.8.1"
iceaddr = {git = "https://github.com/jokull/iceaddr.git", rev = "f490eab"}
skipulagsstofnun = "^0.1.4"
tokenizer = "^2.3.1"
SQLAlchemy = "^1.3.20"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"
ipdb = "^0.13.2"
pytest = "^6.0.1"
flake8 = "^3.8.3"
beautifulsoup4 = "^4.9.1"
html5lib = "^1.0.1"
migra = "^1.0.1597915807"
bpython = "^0.19"
typer = "^0.2.1"
arel = "^0.2.0"
sqlalchemy-stubs = "^0.3"
linetimer = "^0.1.4"
pytest-mock = "^3.3.1"
isort = "^5.5.2"
black = "^20.8b1"
mypy = "^0.790"
Scrapy = "^2.4.1"

[tool.poetry.scripts]
dev-server = "scripts.development:main"
migrate = "scripts.migrate:sync"
debug = "scripts.shell:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
